--- a/index3.css
+++ b/index3.css
@@ -6,8 +6,9 @@
   max-width: 100%;
   max-height:;
   height: ;
-  position: relative;
+  position:relative;
   margin:auto;
+
 }
 
 /*styling the images.
@@ -16,10 +17,15 @@ Make images invisible by default*/
   display: grid;
 }
 
+.carousel-item-active{
+  display:flex;
+  flex-direction: column;
+}
+
 /*Styling the Buttons. forward and back buttons*/
 .back, .forward{
   cursor: pointer;
-  position:absolute;
+  position: absolute;
   top: 25%;
   width: auto;
   margin-top: -23px;
@@ -55,9 +61,26 @@ little opacity*/
   width: 100%;
 }
 
+.product-card-cta-btn{
+  height: 32px;
+  margin-top: 13px;
+  min-width: unset;
+  padding: 5px 11px;
+  text-align: center;
+  background-color: #fff;
+  border: 3px solid #d8d8d8;
+  color: #000;
+  transition: all 300ms;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+.product-card-image{
+  opacity: 0.5;
+}
 /*styling the dots. The circles or bullets or
 indicators*/
 .dots{
+  position: ;
   cursor: pointer;
   height: 16px;
   width: 16px;
@@ -122,8 +145,10 @@ indicators*/
   #brand-promise{
   /*  border: 2px solid black;*/
     text-align:center;
+    font-size: 8px;
+  /*  font-family:'poppins', sans-serif;*/
     letter-spacing: 3px;
-    font-style: italic;
+    font-style:;
     margin: 0px 0px 50px 0px;
     color:#36454f;
   }
@@ -369,18 +394,12 @@ body{
 .row{
   display: flex;
   flex-wrap: wrap;
-  margin: 10px 0px 50px 0px;
+  margin: 30px 0px 50px 0px;
+  gap: ;
 }
 
 .column1{
-  flex: 60%;
-  background-color: #ebfafe;
-  padding:;
-}
-
-
-.column2{
-  flex: 40%;
+  flex: 50%;
   background-color: #ebfafe;
   color: black;
   padding-left:;
@@ -388,9 +407,41 @@ body{
   padding-top: 30px;
   padding-bottom: 70px;
   padding:#;
+  text-align: center;
+}
+
+
+
+.column2{
+  flex: 50%;
+  background-color: #ebfafe;
+  color: black;
+  padding-left:;
+  padding-right:;
+  padding-top: 30px;
+  padding-bottom: 70px;
+  padding:#;
+  text-align: center;
+
 }
 
 .column2 .loc-btn{
+  position: relative;
+  top: ;
+  left: ;
+  /*transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);*/
+  background-color: orange;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.column1 .loc-btn{
   position: relative;
   top: ;
   left: ;
@@ -410,8 +461,194 @@ body{
 @media screen and (max-width: 700px) {
   .row {
     flex-direction:column;
+    gap:;
   }
 
   *{
     box-sizing:border-box;
   }
+
+  /*
+  ===============
+  Countdown Timer
+  ===============
+  */
+
+}
+  /* End of Countdown*/
+  /*
+*{
+  margin:0;
+  padding: 0;
+  font-family:'poppins', sans-serif;
+  box-sizing: border-box;
+}
+
+.container2{
+  width: 100vw;
+  height: 100vh;
+  background-image:url();
+  background-position: center;
+  background-size: cover;
+  padding: 0 8%;
+  position: relative;
+}
+
+.content{
+  top: 50%;
+  position: absolute;
+  tranform: translateY(-50%);
+  color: #fff;
+}
+
+.content h1{
+  font-size: 64px;
+  font-weight: 600;
+}
+
+.content h1 span{
+  color: #ff3753;
+}
+
+.content button{
+  background: transparent;
+  border: px solid #fff;
+  outline:none;
+  padding:12px 25px;
+  color: #fff;
+}
+
+.launch-time{
+  display: flex;
+
+}
+
+/*
+.launch-time div{
+  flex-basis: 100px;
+}
+
+.launch-time div p{
+  font-size: 60px;
+  margin-bottom: -14px;
+}*/
+
+  /*
+===============
+Questions
+===============
+*/
+
+/* global classes*/
+.btn{
+  text-transform: uppercase;
+  background: transparent;
+  color: var(--clr-black);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--radius);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+}
+
+.btn:hover{
+  color: var(--clr-white);
+  background: var(--clr-black)
+}
+
+.section{
+  padding: 5rem 0;
+}
+
+.section-center{
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+.questions{
+  margin: 0px 0px 300px 0px;
+}
+
+@media screen and (min-width: 992px){
+.section-center{
+  width: 95vw;
+}
+}
+
+.title {
+  margin-top: 15vh;
+  margin-bottom: 4rem;
+}
+.title h2 {
+  color: var(--clr-gold);
+  font-family: "Pissons", sans-serif;
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 15px;
+}
+.section-center {
+  max-width: var(--fixed-width);
+}
+.question {
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+  padding: 1.5rem 1.5rem 0 1.5rem;
+  margin-bottom: 2rem;
+
+}
+.question-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-transform: uppercase;
+  padding-bottom: 1rem;
+  font-size: 1.08em;
+  font-family: "Pissons", sans-serif;
+  font-weight: 300;
+}
+
+.question-title p {
+  margin-bottom: 0;
+  letter-spacing: var(--spacing);
+  color: var(--clr-grey-1);
+
+}
+.question-btn {
+  font-size: 1.5rem;
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
+  color: var(--clr-gold);
+  transition: var(--transition);
+}
+.question-btn:hover {
+  transform: rotate(90deg);
+}
+.question-text {
+  padding: 1rem 0 1.5rem 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+.question-text p {
+  margin-bottom: 0;
+}
+/* hide text */
+.question-text {
+  display: none;
+}
+.show-text .question-text {
+  display: block;
+}
+.minus-icon {
+  display: none;
+}
+.show-text .minus-icon {
+  display: inline;
+}
+.show-text .plus-icon {
+  display: none;
+}
+/*End of Questions*/
