--- a/style.css
+++ b/style.css
@@ -279,3 +279,23 @@ Menu
   border-radius: 5px;
   text-align: center;
 }
+
+/*Logo Propertiess*/
+
+.logophoto {
+  object-fit: cover;
+  height: 200px;
+  border: 0.25rem solid var(--clr-gold);
+  border-radius: var(--radius);
+}
+
+@media screen and (min-width: 768px) {
+  .logophoto {
+    height: 175px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .logophoto {
+    height: 150px;
+  }
+}
