--- a/index3.css
+++ b/index3.css
@@ -677,14 +677,14 @@ Questions
 
 .filter-btn {
   background: transparent;
-  border-color: var(--clr-gold);
+  border-color:#c59d5f ;
   font-size: 1rem;
   text-transform: capitalize;
   margin: 0 0.5rem;
   letter-spacing: 1px;
   border-radius: var(--radius);
   padding: 0.375rem 0.75rem;
-  color: var(--clr-gold);
+  color: #c59d5f;
   cursor: pointer;
   transition: var(--transition);
 }
@@ -693,7 +693,7 @@ Questions
 .underline {
   width: 5rem;
   height: 0.25rem;
-  background: var(--clr-gold);
+  background: #c59d5f;
   margin-left: auto;
   margin-right: auto;
 }
