Updated AD blocks 07/18
Wrote better copy in Ad Block

--- a/index3.css
+++ b/index3.css
@@ -689,6 +689,13 @@ Questions
   transition: var(--transition);
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
+.capitaliseu{
+  text-transform: capitalize;
+}
 
 .underline {
   width: 5rem;
