--- a/index3.css
+++ b/index3.css
@@ -145,7 +145,7 @@ indicators*/
   #brand-promise{
   /*  border: 2px solid black;*/
     text-align:center;
-    font-size: 8px;
+    font-size:  ;
   /*  font-family:'poppins', sans-serif;*/
     letter-spacing: 3px;
     font-style:;
