--- a/index3.css
+++ b/index3.css
@@ -418,6 +418,18 @@ body{
   text-align: center;
 }
 
+.column0{
+  flex: 50%;
+  background-color: #fef4eb;
+  color: black;
+  padding-left:;
+  padding-right:;
+  padding-top: 30px;
+  padding-bottom: 70px;
+  padding:#;
+  text-align: center;
+}
+
 
 
 .column2{
