--- a/index3.css
+++ b/index3.css
@@ -478,11 +478,11 @@ body{
 
 
 /* Responsive layout - makes a one column-layout instead of two-column layout */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 700px) {
   .row .row1{
     flex-direction:column;
     gap:;
-    width: 95vw;
+    width: ;
   }
 
   *{
